[compiler] add kyo-compiler: Scala 3 presentation-compiler driver (#1718)
## Problem

kyo is building a new, complete LSP (Language Server Protocol)
implementation for Scala 3, from the ground up on kyo, and that server
needs an engine: a process that owns per-project presentation-compiler
instances, keeps them warm across requests, manages concurrency, and can
isolate the compiler in a separate JVM so it can be hard-killed on a
stuck request. This module is that engine. No existing kyo module
provides it, and building it correctly also surfaced gaps in `kyo-core`,
`kyo-data`, and `kyo-aeron`: no way to cancel a `CompletableFuture` on
interrupt, no unscoped process spawn, no eviction finalizer on `Cache`,
and a `Tag.hash` stable only within a single JVM process.

## Solution

`kyo-compiler` is a new JVM-only module. It owns per-config `Compiler`
handles through a `Compiler.Pool`:

- The pool resolves a warm handle per `(toolchain, classpath,
scalacOptions)` config, single-flights creation, caps global
concurrency, and evicts idle instances by LRU.
- Each handle exposes six offset-based ops, `compile`, `completions`,
`hover`, `signatureHelp`, `symbol`, `didClose`, that drive the
compiler-team-published presentation compiler (`scala.meta.pc`, impl
`dotty.tools.pc`) and return neutral, serializable result types with no
`lsp4j` or `java.net.URI` dependency.
- Backend selection is internal: a version-matched config runs in the
same JVM (`Local`); a version mismatch or an explicit `isolate` flag
runs a forked worker JVM (`Spawn`) over `kyo-aeron` IPC that can be
hard-killed. The caller never names a backend.

Cross-module additions required by the above:

- **`Async.fromCompletableFuture`** (kyo-core, jvm-native): cancels the
future on fiber interrupt and surfaces an exceptional completion as
`Abort[Throwable]`, unlike `fromCompletionStage` which abandons on
interrupt and panics on failure.
- **`Command.spawnUnscoped`** (kyo-core): spawns a process whose
lifetime the call